--- a/next/src/locales/fi.json
+++ b/next/src/locales/fi.json
@@ -221,8 +221,8 @@
       "contact": "Yhteystiedot"
     },
     "events_preview": {
-      "title": "yaklaşan etkinlikler",
-      "subtitle": "Yakında neler olacağına bir göz atın!",
+      "title": "Finike Etkinlik Platformu",
+      "subtitle": "Finikede kültürel etkinlikleri destekleyen gönüllülerden oluşan bir çatı oluşumudur.",
       "event_calendar": "Etkinlik Takvimi",
       "event_groups": "Etkinlik Gurupları",
       "courses_and_private_lessons": "Kurslar ve Özel Dersler"
