Açıklayıcı bir commits

--- a/next/src/locales/fi.json
+++ b/next/src/locales/fi.json
@@ -73,11 +73,11 @@
     "email": "Sähköposti",
     "password": "Salasana",
     "username": "Käyttäjänimi",
-    "content_updated": "Sisältö päivitetty",
+    "content_updated": "İçerik güncellendi",
     "login": "Giriş",
     "register": "Rekisteröidy",
     "on_this_page": "Tällä sivulla",
-    "partners": "ortaklar",
+    "partners": "Sponsorlar",
     "business_id": "Y-tunnus",
     "copy": "Kopioi",
     "logout": "Kirjaudu ulos",
@@ -360,17 +360,17 @@
     "email_subscription": "Sähköpostilistat"
   },
   "pages_feedback": {
-    "title": "Palaute",
-    "description": "Nimettömät palautteet käsitellään hallituksen kokouksissa. Niihin liittyvä keskustelu löytyy pöytäkirjoista, ellei palautteenantaja tätä erityisesti kiellä. Ilman yhteystietoja lähetettyyn palautteeseen ei voida vastata henkilökohtaisesti.",
-    "name": "Sinun nimesi",
-    "email": "Sähköpostiosoitteesi",
-    "receiver": "Vastaanottaja",
-    "subject": "Aihe",
-    "message": "Viesti",
-    "send": "Lähetä",
-    "seo_title": "Luuppi ry | Palaute",
+    "title": "Öneri ve Yorumlar",
+    "description": "Anonim Öneri ve Yorumlar yönetim kurulu toplantılarında ele alınır. Geri bildirim sağlayıcısı özellikle aksini talep etmediği sürece ilgili tartışma tutanaklarda bulunabilir. İletişim bilgileri olmadan gönderilen geri bildirimlere kişisel olarak yanıt verilemez.",
+    "name": "Adınız",
+    "email": "E-posta adresiniz",
+    "receiver": "Alıcı",
+    "subject": "Konu",
+    "message": "Mesaj",
+    "send": "Gönder",
+    "seo_title": "Luuppi ry | Palautee",
     "seo_description": "Anna palautetta Luupille. Nimettömät palautteet käsitellään hallituksen kokouksissa.",
-    "send_feedback": "Lähetä palautetta"
+    "send_feedback": "Geri bildirim gönder"
   },
   "pages_error": {
     "title": "Sayfa bulunamadı",
