--- a/next/src/locales/en.json
+++ b/next/src/locales/en.json
@@ -77,7 +77,7 @@
     "login": "Login",
     "register": "Register",
     "on_this_page": "On this page",
-    "partners": "Partners",
+    "partners": "Sponsors",
     "business_id": "Business ID",
     "copy": "Copy",
     "logout": "Logout",
