karalı değişiklikler vssssss

--- a/next/src/locales/fi.json
+++ b/next/src/locales/fi.json
@@ -224,7 +224,7 @@
       "title": "Finike Etkinlik Platformu",
       "subtitle": "Finikede kültürel etkinlikleri destekleyen gönüllülerden oluşan bir çatı oluşumudur.",
       "event_calendar": "Etkinlik Takvimi",
-      "event_groups": "Etkinlik Gurupları",
+      "event_groups": "Etkinlik Grupları",
       "courses_and_private_lessons": "Kurslar ve Özel Dersler"
     },
     "news": {
