--- a/next/src/locales/en.json
+++ b/next/src/locales/en.json
@@ -261,7 +261,7 @@
   "pages_songbook": {
     "title": "Songbook",
     "description": "Congratulations! You've got your hands on the third edition of the songbook Vergilia Dramatica by Luuppi ry. Carry the book with you like your own child at parties, even tucked in the pocket of your overalls. The roots of this songbook trace back to 2012 when the first version of Vergilia Dramatica was created in the form of a song pamphlet for Luuppi's 'Police and Thieves' sitz.",
-    "seo_title": "Luuppi ry | Songbook",
+    "seo_title": "Luuppi ry | Songbookk",
     "seo_description": "Songs from the third edition of Luuppi ry's songbook Vergilia Dramatica."
   },
   "pages_events": {
