--- a/next/src/locales/fi.json
+++ b/next/src/locales/fi.json
@@ -86,7 +86,7 @@
     "firstNames": "Etunimet",
     "all_categories": "Kaikki kategoriat",
     "lastName": "Sukunimi",
-    "close": "Sulje",
+    "close": "kapat",
     "preferredFullName": "Ensisijainen koko nimi",
     "domicle": "Kotikunta",
     "major": "Pääaine",
