--- a/next/src/locales/fi.json
+++ b/next/src/locales/fi.json
@@ -75,55 +75,55 @@
     "username": "Käyttäjänimi",
     "content_updated": "İçerik güncellendi",
     "login": "Giriş",
-    "register": "Rekisteröidy",
+    "register": "kayıt",
     "on_this_page": "Tällä sivulla",
     "partners": "Sponsorlar",
     "business_id": "Y-tunnus",
-    "copy": "Kopioi",
-    "logout": "Kirjaudu ulos",
+    "copy": "kopyala",
+    "logout": "çıkış yap",
     "copied": "Kopioitu",
     "submit": "Lähetä",
     "firstNames": "Etunimet",
-    "all_categories": "Kaikki kategoriat",
+    "all_categories": "tüm kategoriler",
     "lastName": "Sukunimi",
     "close": "kapat",
     "preferredFullName": "Ensisijainen koko nimi",
     "domicle": "Kotikunta",
     "major": "Pääaine",
-    "today": "Tänään",
-    "tomorrow": "Huomenna",
+    "today": "bugün",
+    "tomorrow": "yarın",
     "min_read": "En az okuma",
     "menu": "Valikko",
-    "open": "Avaa",
-    "page": "Sivu",
+    "open": "Aç",
+    "page": "Sayfa",
     "publication": "Julkaisu",
-    "install_pwa": "Asenna sovellus",
-    "open_pdf": "Avaa PDF",
+    "install_pwa": "uygulamayı indir",
+    "open_pdf": "PDF aç",
     "zoom_calendar_on": "Takvim Yakınlaştır",
     "zoom_calendar_off": "Pienennä kalenteri",
-    "days": "päivää",
+    "days": "günler",
     "days_short": "pv",
-    "hours": "tuntia",
+    "hours": "saatler",
     "hours_short": "h",
-    "minutes": "minuuttia",
-    "first_name": "Etunimi",
-    "last_name": "Sukunimi",
+    "minutes": "dakikalar",
+    "first_name": "isim",
+    "last_name": "soy isim",
     "minutes_short": "min",
-    "seconds": "sekuntia",
+    "seconds": "saniye",
     "seconds_short": "s",
-    "error": "Virhe",
-    "success": "Onnistui",
-    "search": "Hae",
-    "save": "Tallenna",
-    "no_results": "Ei tuloksia",
+    "error": "Hata",
+    "success": "Başarılı",
+    "search": "Ara",
+    "save": "Kaydet",
+    "no_results": "Sonuç yok",
     "expires": "Vanhenee",
     "created_at": "Luotu",
-    "delete": "Poista",
+    "delete": "Sil",
     "general_info": "Perustiedot",
     "expiration_date": "Vanhentumispäivä",
-    "event": "Tapahtuma",
-    "status": "Tila",
-    "price": "Hinta",
+    "event": "Etkinlik",
+    "status": "Durum",
+    "price": "Fiyat",
     "actions": "Toiminnot",
     "questions": "Kysymykset",
     "question": "Kysymys",
@@ -138,15 +138,15 @@
     "starts_at": "Alkaa",
     "registrations": "Ilmoittautumiset",
     "total_paid": "Maksettu yhteensä",
-    "location": "Paikka",
+    "location": "Konum",
     "paid": "Maksettu",
     "quota": "Kiintiö",
     "ongoing": "Meneillään",
     "opens": "aukeaa",
     "membership": "Jäsenyys",
-    "yes": "Kyllä",
-    "no": "Ei",
-    "never": "Ei koskaan",
+    "yes": "Evet",
+    "no": "Hayır",
+    "never": "Asla",
     "no_users": "Käyttäjiä ei löytynyt",
     "no_search_results": "Haulla ei löytynyt käyttäjiä"
   },
@@ -191,7 +191,7 @@
     "general": "Genel",
     "workshops": "Atölyeler",
     "contact": "İletişim",
-    "larpake": "Lärpäke",
+    "larpake": "Dersler",
     "faq": "SSS",
     "privacy_policy": "Gizlilik politikası",
     "miscellaneous": "Çeşitli",
