haberler hayırlı olsun

--- a/next/src/locales/en.json
+++ b/next/src/locales/en.json
@@ -99,6 +99,7 @@
     "open": "Open",
     "page": "Page",
     "publication": "Publication",
+    "draft": "Draft",
     "install_pwa": "Install app",
     "open_pdf": "Open PDF",
     "zoom_calendar_on": "Enlarge calendar",
