--- a/next/src/locales/fi.json
+++ b/next/src/locales/fi.json
@@ -97,10 +97,11 @@
     "open": "Aç",
     "page": "Sayfa",
     "publication": "Julkaisu",
+    "draft": "Taslak",
     "install_pwa": "uygulamayı indir",
     "open_pdf": "PDF aç",
-    "zoom_calendar_on": "Takvim Yakınlaştır",
-    "zoom_calendar_off": "Pienennä kalenteri",
+    "zoom_calendar_on": "Takvimi Yakınlaştır",
+    "zoom_calendar_off": "Takvimi Küçült",
     "days": "günler",
     "days_short": "pv",
     "hours": "saatler",
@@ -174,7 +175,7 @@
     "studies": "Etkinlik Grupları",
     "tutoring": "Özel Ders",
     "events": "Etkinlik Takvimi",
-    "news": "Haberler",
+    "news": "Platformdan Haberler",
     "communication": "Topluluk",
     "sanomat": "Mesajlar",
     "gallery": "Galari",
