ufak tefek yazım hataları düzeltildsi

--- a/next/src/locales/fi.json
+++ b/next/src/locales/fi.json
@@ -223,7 +223,7 @@
     },
     "events_preview": {
       "title": "Finike Etkinlik Platformu",
-      "subtitle": "Finikede kültürel etkinlikleri destekleyen gönüllülerden oluşan bir çatı oluşumudur.",
+      "subtitle": "Finike'de kültürel etkinlikleri destekleyen gönüllülerden oluşan bir çatı oluşumudur.",
       "event_calendar": "Etkinlik Takvimi",
       "event_groups": "Etkinlik Gurupları",
       "courses_and_private_lessons": "Kurslar ve Özel Dersler"
